--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "build": "tsc",
     "play": "npm run build && node ./dist/index.js",
-    "req":"npm run build && node ./dist/buildRequisiteTree.js"
+    "req": "npm run build && node ./dist/reformatingreqs.js",
+    "cleanR": "npm run build && node ./dist/cleanCourses.js",
+    "cleanP": "npm run build && node ./dist/cleanProgramRequirements.js",
+    "program": "npm run build && node ./dist/programRequirements.js",
+    "sql": "npm run build && node ./dist/sqlQuerys.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +21,7 @@
   },
   "dependencies": {
     "eslint": "^9.14.0",
-    "jsdom": "^25.0.1"
+    "jsdom": "^25.0.1",
+    "postgres": "^3.4.5"
   }
 }
