--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "cleanR": "npm run build && node ./dist/cleanCourses.js",
     "cleanP": "npm run build && node ./dist/cleanProgramRequirements.js",
     "program": "npm run build && node ./dist/programRequirements.js",
-    "sql": "npm run build && node ./dist/sqlQuerys.js"
+    "sql": "npm run build && node ./dist/sqlQuerys.js",
+    "pdf": "npm run build && node ./dist/pdfparse.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
+    "@types/pdf-parse": "^1.1.4",
     "tsx": "^4.19.2"
   },
   "dependencies": {
     "eslint": "^9.14.0",
     "jsdom": "^25.0.1",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.8.69",
     "postgres": "^3.4.5"
   }
 }
